--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -2,13 +2,13 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
-		<StartupObject></StartupObject>
+		<StartupObject>IodemBot.Program</StartupObject>
 		<ApplicationIcon></ApplicationIcon>
 		<DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
 		<Version>3.0.0.0</Version>
-		<AssemblyVersion>3.2.2304.0</AssemblyVersion>
+		<AssemblyVersion>3.2.2304.1</AssemblyVersion>
 		<Deterministic>false</Deterministic>
-		<FileVersion>3.0.0.210</FileVersion>
+		<FileVersion>3.0.0.211</FileVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 	  <ShouldCreateLogs>True</ShouldCreateLogs>
