--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -6,14 +6,14 @@
 		<ApplicationIcon></ApplicationIcon>
 		<DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
 		<Version>3.0.0.0</Version>
-		<AssemblyVersion>3.2.2311.1</AssemblyVersion>
+		<AssemblyVersion>3.2.*</AssemblyVersion>
 		<Deterministic>false</Deterministic>
 		<FileVersion>3.0.0.347</FileVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 	  <ShouldCreateLogs>True</ShouldCreateLogs>
 	  <AdvancedSettingsExpanded>False</AdvancedSettingsExpanded>
-	  <UpdateAssemblyVersion>False</UpdateAssemblyVersion>
+	  <UpdateAssemblyVersion>True</UpdateAssemblyVersion>
 	  <UpdateAssemblyFileVersion>False</UpdateAssemblyFileVersion>
 	  <UpdateAssemblyInfoVersion>False</UpdateAssemblyInfoVersion>
 	  <AssemblyVersionSettings>None.None.None.None</AssemblyVersionSettings>
